todo listo para empezar flexbox

--- a/index.html
+++ b/index.html
@@ -11,35 +11,65 @@
 </head>
 
 <body>
-    <main class="container text-center">
+    <main class="container text-center d-flex">
         <h1 class="display-4">Lista de precios</h1>
-        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque a quo consequuntur ullam minima
+        <p class="lead mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque a quo consequuntur ullam
+            minima
             iure, facere, atque molestiae eligendi blanditiis ut. Natus magni asperiores quo ducimus nobis aliquam vitae
-            ipsa.</p>
+            ipsa molestiae eligendi blanditiis.</p>
 
         <div class="row">
             <article class="col-12 col-md-4">
                 <div class="border border-dark rounded-3">
-                    <p>Basic</p>
+                    <p class="mt-5 fw-bold">Basic</p>
+                    <h2 class="display-4">$100</h2>
+                    <p class="font-monospace mt-3">Up to 5 user for free</p>
+                    <ul class="list-unstyled my-5">
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem ipsum dolor sit.</li>
+                        <li>Lorem, ipsum dolor.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    <a href="#" class="bg-info text-white d-block py-3 text-decoration-none">Acceder</a>
                 </div>
             </article>
 
-                <article class="col-12 col-md-4">
-                    <div class=" border border-dark rounded-3">
-                        <p>Pro</p>
-                    </div>
-                </article>
-
-                    <article class="col-12 col-md-4">
-                        <div class=" border border-dark rounded-3">
-                            <p>Ultimate</p>
-                        </div>
-                    </article>
-
-
-
+            <article class="col-12 col-md-4">
+                <div class=" border border-dark rounded-3 bg-dark text-white">
+                    <p class="mt-5 fw-bold">Pro</p>
+                    <h2 class="display-4">$200</h2>
+                    <p class="font-monospace mt-3">Up to 15 user for free</p>
+                    <ul class="list-unstyled my-5">
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem ipsum dolor sit.</li>
+                        <li>Lorem, ipsum dolor.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    <a href="#" class="bg-secondary text-white d-block py-3 text-decoration-none">Acceder</a>
                 </div>
+            </article>
 
+            <article class="col-12 col-md-4">
+                <div class=" border border-dark rounded-3">
+                    <p class="mt-5 fw-bold">Ultimate</p>
+                    <h2 class="display-4">$500</h2>
+                    <p class="font-monospace mt-3">Up to 50 user for free</p>
+                    <ul class="list-unstyled my-5">
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem ipsum dolor sit.</li>
+                        <li>Lorem, ipsum dolor.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    <a href="#" class="bg-info text-white d-block py-3 text-decoration-none">Acceder</a>
+                </div>
+            </article>
+
+
+
+        </div>
+        <footer>
+            <p class="mt-5">Recuerda escribir el codigo 😘</p>
+        </footer>
     </main>
 
 
