--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <main class="container text-center">
+    <main class="container text-center d-flex flex-column alto justify-content-center">
         <h1 class="display-4">Lista de precios</h1>
         <p class="lead mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque a quo consequuntur ullam
             minima
