margin top and rounded

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                         <li>Lorem, ipsum dolor.</li>
                         <li>Lorem ipsum dolor sit amet.</li>
                     </ul>
-                    <a href="#" class="bg-info text-white d-block py-3 text-decoration-none">Acceder</a>
+                    <a href="#" class="bg-info text-white d-block py-3 text-decoration-none rounded-bottom">Acceder</a>
                 </div>
             </article>
 
-            <article class="col-12 col-md-4">
+            <article class="col-12 margen-arriba col-md-4">
                 <div class=" border border-dark rounded-3 bg-dark text-white">
                     <p class="mt-5 fw-bold">Pro</p>
                     <h2 class="display-4">$200</h2>
@@ -45,11 +45,11 @@
                         <li>Lorem, ipsum dolor.</li>
                         <li>Lorem ipsum dolor sit amet.</li>
                     </ul>
-                    <a href="#" class="bg-secondary text-white d-block py-3 text-decoration-none">Acceder</a>
+                    <a href="#" class="bg-secondary text-white d-block py-3 text-decoration-none rounded-bottom">Acceder</a>
                 </div>
             </article>
 
-            <article class="col-12 col-md-4">
+            <article class="col-12 margen-arriba col-md-4">
                 <div class=" border border-dark rounded-3">
                     <p class="mt-5 fw-bold">Ultimate</p>
                     <h2 class="display-4">$500</h2>
@@ -60,7 +60,7 @@
                         <li>Lorem, ipsum dolor.</li>
                         <li>Lorem ipsum dolor sit amet.</li>
                     </ul>
-                    <a href="#" class="bg-info text-white d-block py-3 text-decoration-none">Acceder</a>
+                    <a href="#" class="bg-info text-white d-block py-3 text-decoration-none rounded-bottom">Acceder</a>
                 </div>
             </article>
 
